Bug in pointer on day/dark mode solved

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ div#theme {
   background-image: url(/img/eclipse.png);
   background-position: center center;
   background-size: contain;
+  cursor: pointer;
 }
 
 button#resetBtn.day {
